@@ -1,6 +1,7 @@
 2.13 - ?
 	- Added 'formcode' parameter to all modification requests to fix all
-		cross-site request forgery vulnerabilities
+	  cross-site request forgery vulnerabilities
+	- URL change: /u/logout => /u$id/logout
 
 2.12 - 2010-11-03
 	- !scr command for Multi::IRC
